--- a/resources/sass/2-layouts/_single-product-with-des.scss
+++ b/resources/sass/2-layouts/_single-product-with-des.scss
@@ -13,8 +13,8 @@
             width:34%;
             .big-image{
                 width:100%;
-                height:600px;
-
+                height:500px;
+                margin-bottom:2%;
                 img{
                     width:auto;
                     height:100%;                            
@@ -23,7 +23,18 @@
             .several-images{
                 width:100%;
                 height:100px;
-                position:relative;
+                position:relative; 
+                img{
+                    &.demo {
+                        opacity: 0.6;
+                    }
+                    &.active,
+                    &.demo:hover {
+                        opacity: 1;
+                        @include border(1px, $item_price_color, 20px);
+                        background:#dfe1e1;
+                    }
+                }
                 .owl-nav{
                     position:absolute;
                     display:block;
@@ -87,16 +98,24 @@
                         color:black;
                     }
                 }
-                .two-buttons{
+                .pr-des-radio-buttons,
+                .pr-des-radio-buttons2,
+                .pr-des-radio-buttons3{
                     width:100%;
                     margin:1% 0;
-                    button{
+                    div{
                         margin-right:10px;
-                        padding:15px 30px;
+                        padding:15px 0;
+                        width:18%;
+                        display: inline-block;
                         color:black;
+                        text-align:center;
                         background:white;
+                        cursor:pointer;
                         @include border(2px, $comment_color, 25px );
+                        transition:0.3s ease-in-out;
                         &.active{
+                            transition:0.3s ease-in-out;
                             border-color:$item_price_color;
                         }
                     }
@@ -104,14 +123,16 @@
                 .colors{
                     @include displayFlex(flex-start, row, flex-start);
                     margin-bottom:3%;
-                    div{
+                    .color{
                         margin-right:8px;
                         padding:6px;
                         width:50px;
                         height:50px;
                         @include border(2px,$comment_color, 50%);
+                        transition:0.3s ease-in-out;
                         &.active{
                             border-color:$item_price_color;
+                            transition:0.3s ease-in-out;
                         }
                         div{
                             width:34px;
