--- a/public/css/catalog-page.css
+++ b/public/css/catalog-page.css
@@ -743,6 +743,43 @@ nav ol.breadcrumb li {
           transform: rotate(90deg);
 }
 
+.nav-pills.page-tabs {
+  height: 65px;
+  background: #f1f2f6;
+  width: 100%;
+  padding: 0 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav-pills.page-tabs li a {
+  padding: 15px 30px;
+  color: #07108f;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 18px;
+  border: none;
+  border-radius: 23px;
+  background: transparent;
+  margin: 0 10px 0 0;
+}
+
+.nav-pills.page-tabs li a.active {
+  background: #0042ff;
+  color: white;
+}
+
 .news-inner-btn, .blog-news-btn, .new-popular-recommended-btn, .single-blog-btn {
   height: 65px;
   background: #f1f2f6;
@@ -934,7 +971,7 @@ form.small-filter {
   .h4-title {
     padding: 3% 8%;
   }
-  .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet, .h4-title.shops-body, .h4-title.u-will-also-like, .h4-title.other-products-of-this-seller, .h4-title.similar-products, .h4-title.compare {
+  .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet, .h4-title.shops-body, .h4-title.u-will-also-like, .h4-title.other-products-of-this-seller, .h4-title.similar-products, .h4-title.brand-view, .h4-title.compare {
     padding: 1% 8%;
   }
 }
@@ -943,7 +980,7 @@ form.small-filter {
   .h4-title {
     padding: 2% 5%;
   }
-  .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet, .h4-title.shops-body, .h4-title.u-will-also-like, .h4-title.other-products-of-this-seller, .h4-title.similar-products, .h4-title.compare {
+  .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet, .h4-title.shops-body, .h4-title.u-will-also-like, .h4-title.other-products-of-this-seller, .h4-title.similar-products, .h4-title.compare, .h4-title.brand-view {
     padding: 1% 5%;
   }
   nav ol.breadcrumb {
@@ -980,7 +1017,7 @@ form.small-filter {
   .h4-title {
     padding: 2.5% 5%;
   }
-  .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet, .h4-title.shops-body, .h4-title.u-will-also-like, .h4-title.other-products-of-this-seller, .h4-title.similar-products, .h4-title.compare {
+  .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet, .h4-title.shops-body, .h4-title.u-will-also-like, .h4-title.other-products-of-this-seller, .h4-title.similar-products, .h4-title.compare, .h4-title.brand-view {
     padding: 1.5% 5%;
   }
 }
@@ -998,7 +1035,7 @@ form.small-filter {
   .h4-title {
     padding: 3% 5%;
   }
-  .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet, .h4-title.shops-body, .h4-title.u-will-also-like, .h4-title.other-products-of-this-seller, .h4-title.similar-products, .h4-title.compare {
+  .h4-title.video-blog, .h4-title.catalog-view, .h4-title.pay-body, .h4-title.sales-body, .h4-title.recently-viewed, .h4-title.brands-alphabet, .h4-title.shops-body, .h4-title.u-will-also-like, .h4-title.other-products-of-this-seller, .h4-title.similar-products, .h4-title.compare, .h4-title.brand-view {
     padding: 2% 5%;
   }
   h4.title {
@@ -2693,12 +2730,7 @@ img.menu-auto-icon:hover {
   }
 }
 
-.slide-banner-catalog,
-.slide-banner-brandv,
-.slide-banner-shopv,
-.slide-banner-delivery,
-.slide-banner-guaranty,
-.slide-banner-payment {
+.slide-banner {
   width: 80%;
   height: 200px;
   margin: 1%  auto 2%;
@@ -2707,53 +2739,19 @@ img.menu-auto-icon:hover {
   background-size: cover;
 }
 
-.slide-banner-catalog {
-  background: url("../images/catalog-slider-banner.png");
-  margin: 1%  auto 1%;
-}
-
-.slide-banner-brand-view .h4-title {
-  padding: 0.5% 10%;
-}
-
-.slide-banner-brand-view .slide-banner-brandv {
-  background: url("../images/brand-view-slide-banner.png");
-}
-
-.slide-banner-shopv {
-  background: url("../images/shop-view-slide-banner.png");
-}
-
-.slide-banner-delivery {
-  background: url("../images/delivery-slide-banner.png");
-}
-
-.slide-banner-guaranty {
-  background: url("../images/guaranty-slide-banner.png");
-}
-
-.slide-banner-payment {
-  background: url("../images/payment-slide-banner.png");
+.slide-banner img {
+  width: 100%;
+  height: 100%;
 }
 
 @media all and (max-width: 1522px) {
-  .slide-banner-catalog,
-  .slide-banner-brandv,
-  .slide-banner-shopv,
-  .slide-banner-delivery,
-  .slide-banner-guaranty,
-  .slide-banner-payment {
+  .slide-banner {
     width: 84%;
   }
 }
 
 @media all and (max-width: 1400px) {
-  .slide-banner,
-  .slide-banner-brandv,
-  .slide-banner-shopv,
-  .slide-banner-delivery,
-  .slide-banner-guaranty,
-  .slide-banner-payment {
+  .slide-banner {
     width: 90%;
   }
 }
