--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -276,6 +276,28 @@ nav ol.breadcrumb{
         }
     }
 }
+.nav-pills.page-tabs{
+    height:65px;
+    background:$bg_grey_color;
+    width:100%;
+    padding:0 10%;
+    @include displayFlex(flex-start, row, center);
+    li a{
+        padding:15px 30px;
+        color:$title_color;
+        font-weight:bold;
+        font-size:18px;
+        line-height:18px;
+        border:none;
+        border-radius:23px;
+        background:transparent;
+        margin:0 10px 0 0;
+        &.active{
+            background:$item_price_color;
+            color:white;
+        }
+    }
+}
 .news-inner-btn, .blog-news-btn, .new-popular-recommended-btn, .single-blog-btn{
     height:65px;
     background:$bg_grey_color;
@@ -379,6 +401,18 @@ form.small-filter{
     display: none;
     
 }
+.slide-banner{
+    width:80%;
+    height:200px;
+    margin:1%  auto 2%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    img{
+        width:100%;
+        height:100%;
+    }
+}
 @media all and (max-width:1695px){
     span.sale.big{
         font-size:18px;
@@ -406,9 +440,12 @@ form.small-filter{
         &.video-blog, &.catalog-view, &.pay-body,
          &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body,
          &.u-will-also-like, &.other-products-of-this-seller, &.similar-products,
-         &.compare{
+         &.brand-view, &.compare{
             padding:1% 8%;
         }
+    }
+    .slide-banner{
+        width:84%;
     }
 }
 @media all and (max-width:1400px){
@@ -417,11 +454,14 @@ form.small-filter{
         &.video-blog, &.catalog-view, &.pay-body,
          &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body,
          &.u-will-also-like, &.other-products-of-this-seller, &.similar-products,
-         &.compare{
+         &.compare, &.brand-view{
             padding:1% 5%;
         }
     }
     nav ol.breadcrumb{
+        width:90%;
+    }
+    .slide-banner{
         width:90%;
     }
 
@@ -473,7 +513,7 @@ form.small-filter{
         &.video-blog, &.catalog-view, &.pay-body,
          &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body,
          &.u-will-also-like, &.other-products-of-this-seller, &.similar-products,
-         &.compare{
+         &.compare, &.brand-view{
             padding:1.5% 5%;
         }
     }
@@ -500,7 +540,7 @@ form.small-filter{
         &.video-blog, &.catalog-view, &.pay-body,
          &.sales-body, &.recently-viewed, &.brands-alphabet, &.shops-body,
          &.u-will-also-like, &.other-products-of-this-seller, &.similar-products,
-         &.compare{
+         &.compare, &.brand-view{
             padding:2% 5%;
         }
     }
