--- a/resources/sass/blog-news.scss
+++ b/resources/sass/blog-news.scss
@@ -11,6 +11,7 @@
 @import "2-layouts/main-header";
 @import "2-layouts/nav-header";
 @import "2-layouts/blog-body";
+@import "2-layouts/news-body";
 
 @import "2-layouts/price-rating-comments";
 
