--- a/public/css/productviewpage.css
+++ b/public/css/productviewpage.css
@@ -1435,7 +1435,7 @@ nav ol.breadcrumb li {
 .all-filtered-shops {
   width: 100%;
   min-height: 430px;
-  padding: 2% 0;
+  padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1855,10 +1855,6 @@ form.big-filter-without-title-checkbox .panel, form.big-filter-with-title-checkb
   margin-bottom: 1%;
 }
 
-form.big-filter-without-title-checkbox .panel.hide, form.big-filter-with-title-checkbox .panel.hide {
-  display: none;
-}
-
 form.big-filter-without-title-checkbox .panel .custom-conrol, form.big-filter-with-title-checkbox .panel .custom-conrol {
   margin-bottom: 1.5%;
 }
@@ -1923,6 +1919,42 @@ form.big-filter-without-title-checkbox input#submit, form.big-filter-with-title-
   border-radius: 23px;
   margin: 15% auto 0;
   font-weight: bold;
+}
+
+form.big-filter-with-listof-checkbox {
+  width: 18%;
+  margin-top: 5%;
+  text-align: start;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+form.big-filter-with-listof-checkbox input#submit {
+  background: #0042ff;
+  color: white;
+  font-size: 16px;
+  padding: 15px 0;
+  width: 100%;
+  white-space: nowrap;
+  text-align: center;
+  border-radius: 23px;
+  margin: 15% auto 0;
+  font-weight: bold;
+}
+
+form.big-filter-with-listof-checkbox .custom-control {
+  margin: 2% 0;
 }
 
 form.small-filter {
@@ -4723,44 +4755,67 @@ img.menu-auto-icon:hover {
   padding: 2% 10%;
 }
 
-.outter-full-characteristics .accordion {
+.outter-full-characteristics .accordion-characteristics {
   width: 48%;
   text-align: start;
 }
 
-.outter-full-characteristics .accordion .card .card-header {
-  border-bottom: 1px solid #dfe4ea;
-}
-
-.outter-full-characteristics .accordion .card .card-header h2 button {
+.outter-full-characteristics .accordion-characteristics button {
+  width: 100%;
   text-align: left;
   font-family: 'cerapro-bold';
   font-size: 16px;
   padding: 10px 0;
-  border-bottom: 1px solid #dfe4ea;
+  cursor: pointer;
+  padding: 18px 0;
+  outline: none;
+  position: relative;
+  background: transparent;
+  border-bottom: 1px solid #d1d8e0;
 }
 
-.outter-full-characteristics .accordion .card .card-header h2 button:after {
+.outter-full-characteristics .accordion-characteristics button:after {
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  top: 50%;
   right: 10px;
+  content: '\002B';
+  content: url("../images/gotoresults_searchresulticon.svg");
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
-.outter-full-characteristics .accordion .card .card-body {
+.outter-full-characteristics .accordion-characteristics button.active:after {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.outter-full-characteristics .accordion-characteristics .panel {
   margin-top: 10px;
   padding: 0;
+  display: block;
+  font-size: 18px;
+  width: 100%;
+  margin-bottom: 1%;
 }
 
-.outter-full-characteristics .accordion .card .card-body p.grey {
+.outter-full-characteristics .accordion-characteristics .panel p.grey {
   font-size: 14.5px;
   color: #a5b1c2;
   margin-bottom: 5px;
 }
 
-.outter-full-characteristics .accordion .card .card-body p.black {
+.outter-full-characteristics .accordion-characteristics .panel p.black {
   font-size: 16px;
   margin-bottom: 10px;
 }
 
-.outter-full-characteristics .accordion .card .card-body .colors {
+.outter-full-characteristics .accordion-characteristics .panel .colors {
   height: 20px;
   width: auto;
   display: -webkit-box;
@@ -4779,26 +4834,26 @@ img.menu-auto-icon:hover {
   margin-bottom: 20px;
 }
 
-.outter-full-characteristics .accordion .card .card-body .colors div {
+.outter-full-characteristics .accordion-characteristics .panel .colors div {
   height: 16px;
   width: 16px;
   border-radius: 50%;
   margin-right: 10px;
 }
 
-.outter-full-characteristics .accordion .card .card-body .colors div.pink {
+.outter-full-characteristics .accordion-characteristics .panel .colors div.pink {
   background: #dda6c5;
 }
 
-.outter-full-characteristics .accordion .card .card-body .colors div.blue {
+.outter-full-characteristics .accordion-characteristics .panel .colors div.blue {
   background: #409be8;
 }
 
-.outter-full-characteristics .accordion .card .card-body .colors div.nude {
+.outter-full-characteristics .accordion-characteristics .panel .colors div.nude {
   background: #d9cba4;
 }
 
-.outter-full-characteristics .accordion .card .card-body .colors div.dark-grey {
+.outter-full-characteristics .accordion-characteristics .panel .colors div.dark-grey {
   background: #636363;
 }
 
