--- a/resources/sass/2-layouts/_single-product-with-des.scss
+++ b/resources/sass/2-layouts/_single-product-with-des.scss
@@ -416,62 +416,76 @@
     @include displayFlex(flex-start, row, center);
     width:100%;
     padding:2% 10%;
-    .accordion{
+    .accordion-characteristics{
         width:48%;
         text-align:start;
-        .card{
-            .card-header{
-                border-bottom:1px solid $item_border_color;
-                h2{
-                    button{
-                        text-align: left;
-                       @include fontBold;
-                       font-size:16px;
-                       padding:10px 0;
-                        border-bottom:1px solid $item_border_color;
-                        &:after{
-                            right:10px;
-                        }
-                    }
-                }
+        button{
+            width:100%;
+            text-align: left;
+            @include fontBold;
+            font-size:16px;
+            padding:10px 0;
+            cursor: pointer;
+            padding: 18px 0;
+            outline: none;
+            position:relative;
+            background:transparent;
+            border-bottom:1px solid $link_hover_color;
+            &:after{
+                width: 10px;
+                height: 10px;
+                position:absolute;
+                top:50%;
+                right:10px;
+                content: '\002B';
+                content:url("../images/gotoresults_searchresulticon.svg");
+                transform: rotate(-90deg);
+                transition: 0.4s;
             }
-            .card-body{
-                margin-top:10px;
-                padding:0;
-                p.grey{
-                    font-size:14.5px;
-                    color:$grey_text2;
-                    margin-bottom:5px;
-                }
-                p.black{
-                    font-size:16px;
-                    margin-bottom:10px;
-                }
-                .colors{
-                    height:20px;
-                    width:auto;
-                    @include displayFlex(flex-start, row, center);
-                    margin-bottom:20px;
-                    div{
-                        height:16px;
-                        width:16px;
-                        border-radius:50%;
-                        margin-right:10px;
-                        &.pink{
-                            background:#dda6c5;
-                        }
-                        &.blue{
-                            background: #409be8;
-                        }
-                        &.nude{
-                            background: #d9cba4;
-                        }
-                        &.dark-grey{
-                            background:#636363 ;
-                        }
+            &.active:after{
+                transform: rotate(90deg);
+                transition: 0.4s;
+            }
+        }
+        .panel{
+            margin-top:10px;
+            padding:0;
+            display: block;
+            font-size:18px;
+            width:100%;
+            margin-bottom:1%;
+            p.grey{
+                font-size:14.5px;
+                color:$grey_text2;
+                margin-bottom:5px;
+            }
+            p.black{
+                font-size:16px;
+                margin-bottom:10px;
+            }
+            .colors{
+                height:20px;
+                width:auto;
+                @include displayFlex(flex-start, row, center);
+                margin-bottom:20px;
+                div{
+                    height:16px;
+                    width:16px;
+                    border-radius:50%;
+                    margin-right:10px;
+                    &.pink{
+                        background:#dda6c5;
+                    }
+                    &.blue{
+                        background: #409be8;
+                    }
+                    &.nude{
+                        background: #d9cba4;
+                    }
+                    &.dark-grey{
+                        background:#636363 ;
                     }
                 }
-
             }
         }
     }
