nav-header dropdown

--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -147,7 +147,15 @@ span.new-product{
         }
     }
 }
-
+// .nav-header-dropdown-icon{
+//     border:none;
+//       content:url('../images/gotoresults_searchresulticon.svg');
+//       width: 12px;
+//       height:12px;
+//       position:absolute;
+//       right:4%;
+//       top:50%;
+// }
 button.owl-prev, .owl-carousel .owl-nav button.owl-prev{
     position: absolute;
     background:#668eff;
