--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3573,8 +3573,8 @@ nav#main_navbar .collapse .navbar-nav .dropdown-main .dropdown-menu {
   padding: 0;
   border-radius: 0;
   border: none;
-  -webkit-animation: fadeIn ease 0.6hozs;
-          animation: fadeIn ease 0.6hozs;
+  -webkit-animation: fadeIn ease 0.4s;
+          animation: fadeIn ease 0.4s;
   color: #242954;
   -webkit-box-shadow: 0px 2px 7px -5px black;
           box-shadow: 0px 2px 7px -5px black;
@@ -3590,11 +3590,6 @@ nav#main_navbar .collapse .navbar-nav .dropdown-main .dropdown-menu .dropdown-it
 
 nav#main_navbar .collapse .navbar-nav .dropdown-main .dropdown-menu .dropdown-toggle::after {
   border: none;
-  content: url("../images/gotoresults_searchresulticon.svg");
-  width: 12px;
-  height: 12px;
-  position: absolute;
-  right: 4%;
 }
 
 nav#main_navbar .collapse .navbar-nav .dropdown, nav#main_navbar .collapse .navbar-nav .dropleft, nav#main_navbar .collapse .navbar-nav .dropright, nav#main_navbar .collapse .navbar-nav .dropup {
