--- a/resources/sass/2-layouts/_nav-header.scss
+++ b/resources/sass/2-layouts/_nav-header.scss
@@ -155,9 +155,12 @@ nav#main_navbar{
           padding:0;
           border-radius: 0;
           border:none;
-          animation: fadeIn ease 0.6hozs;
+          animation: fadeIn ease 0.4s;
           color:$menu_dropdown_color;
           @include box-shadow(0px, 2px, 7px, -5px, rgba(0,0,0,1));
+          // li.nav-item{
+          //   position:relative;
+          // }
           .dropdown-item img{
             width:20px;
             height:20px;
@@ -167,11 +170,11 @@ nav#main_navbar{
           }
           .dropdown-toggle::after {
             border:none;
-            content:url('../images/gotoresults_searchresulticon.svg');
-            width: 12px;
-            height:12px;
-            position:absolute;
-            right:4%;
+            // content:url('../images/gotoresults_searchresulticon.svg');
+            // width: 12px;
+            // height:12px;
+            // position:absolute;
+            // right:4%;
           }
         }
       }
