--- a/public/css/salesview.css
+++ b/public/css/salesview.css
@@ -4453,6 +4453,7 @@ nav.products-pagination ul li.active {
 
 nav.products-pagination ul li.active a {
   color: white;
+  background: transparent;
 }
 
 nav.products-pagination ul li a {
@@ -4461,6 +4462,8 @@ nav.products-pagination ul li a {
   font-size: 20px;
   padding: 0;
   font-weight: bold;
+  border: none;
+  background: transparent;
 }
 
 nav.products-pagination ul li a i {
@@ -4470,6 +4473,15 @@ nav.products-pagination ul li a i {
 
 nav.products-pagination ul li a i:before {
   color: #07108f;
+}
+
+.page-link {
+  background: transparent !important;
+  border: none !important;
+  font-size: 20px;
+  line-height: 50px;
+  font-weight: bold;
+  padding: 0;
 }
 
 .news-letter {
