--- a/public/css/videoblog-view.css
+++ b/public/css/videoblog-view.css
@@ -4370,6 +4370,7 @@ nav.products-pagination ul li.active {
 
 nav.products-pagination ul li.active a {
   color: white;
+  background: transparent;
 }
 
 nav.products-pagination ul li a {
@@ -4378,6 +4379,8 @@ nav.products-pagination ul li a {
   font-size: 20px;
   padding: 0;
   font-weight: bold;
+  border: none;
+  background: transparent;
 }
 
 nav.products-pagination ul li a i {
@@ -4387,6 +4390,15 @@ nav.products-pagination ul li a i {
 
 nav.products-pagination ul li a i:before {
   color: #07108f;
+}
+
+.page-link {
+  background: transparent !important;
+  border: none !important;
+  font-size: 20px;
+  line-height: 50px;
+  font-weight: bold;
+  padding: 0;
 }
 
 .news-letter {
