--- a/resources/sass/2-layouts/_pagination.scss
+++ b/resources/sass/2-layouts/_pagination.scss
@@ -14,6 +14,7 @@ nav.products-pagination{
                 background:$title_color;
                 a{
                     color:white;
+                    background:transparent;
                 }
             }
             a{
@@ -22,6 +23,8 @@ nav.products-pagination{
                 font-size:20px;
                 padding:0;
                 font-weight:bold;
+                border:none;
+                background:transparent;
                 i{
                     font-size:15px;
                     line-height: 50px;
@@ -32,4 +35,12 @@ nav.products-pagination{
             }
         }
     }
+}
+.page-link{
+    background:transparent !important;
+    border:none !important;
+    font-size:20px;
+    line-height:50px;
+    font-weight:bold;
+    padding:0;
 }
