--- a/resources/sass/brands.scss
+++ b/resources/sass/brands.scss
@@ -12,6 +12,8 @@
 @import "2-layouts/nav-header";
 @import "2-layouts/brands-alphabet";
 
+@import "2-layouts/price-rating-comments";
+@import "2-layouts/pagination";
 
 @import "2-layouts/news-letter";
 @import "2-layouts/footer";
