--- a/resources/sass/sales.scss
+++ b/resources/sass/sales.scss
@@ -13,6 +13,7 @@
 @import "2-layouts/sales-body";
 @import "2-layouts/price-rating-comments";
 
+@import "2-layouts/salesview-body";
 @import "2-layouts/pagination";
 
 @import "2-layouts/news-letter";
