--- a/public/css/sales.css
+++ b/public/css/sales.css
@@ -4164,6 +4164,322 @@ img.menu-auto-icon:hover {
   }
 }
 
+.outter-salesview-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 100%;
+  padding: 2% 10%;
+  text-align: left;
+}
+
+.outter-salesview-body .shop-name {
+  text-align: left;
+  width: 25%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.outter-salesview-body .shop-name img {
+  width: 55px;
+  height: 55px;
+  margin-right: 10px;
+}
+
+.outter-salesview-body .shop-name .name h6 {
+  font-size: 16px;
+  color: #0b2546;
+  white-space: nowrap;
+  margin-bottom: 5px;
+}
+
+.outter-salesview-body .shop-name .name p {
+  font-size: 14px;
+  color: #a4b0be;
+  margin-bottom: 0;
+}
+
+.outter-salesview-body .sales-view-body {
+  width: 78%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.outter-salesview-body .sales-view-body img {
+  width: 100%;
+  height: 440px;
+}
+
+.outter-salesview-body .sales-view-body .description {
+  text-align: left;
+  margin: 1% 0;
+  color: #0b2546;
+}
+
+.outter-salesview-body .sales-view-body .description h5.title {
+  font-size: 30px;
+  color: #0b2546;
+}
+
+.outter-salesview-body .sales-view-body .description h6.title {
+  font-size: 20px;
+  font-family: 'cerapro-bold';
+}
+
+.outter-salesview-body .sales-view-body .description p {
+  font-size: 20px;
+}
+
+.outter-salesview-body .sales-view-body .item {
+  height: 390px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid #dfe4ea;
+  border-radius: 0;
+  background: white;
+}
+
+.outter-salesview-body .sales-view-body .item .product-img {
+  width: 38%;
+  height: 100%;
+  position: relative;
+}
+
+.outter-salesview-body .sales-view-body .item .product-img img {
+  width: auto;
+  margin: auto;
+  height: 100%;
+  padding: 20px;
+}
+
+.outter-salesview-body .sales-view-body .item .product-img span.new-product {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.outter-salesview-body .sales-view-body .item .product-img span.sale.small {
+  right: 5px;
+}
+
+.outter-salesview-body .sales-view-body .item .description {
+  width: 66%;
+  height: 100%;
+  padding: 2%  2% 2% 0;
+  text-align: left;
+  position: relative;
+  -webkit-column-count: 2;
+          column-count: 2;
+  -webkit-column-width: 25%;
+          column-width: 25%;
+}
+
+.outter-salesview-body .sales-view-body .item .description .list-full-des {
+  width: 100%;
+  height: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.outter-salesview-body .sales-view-body .item .description .list-full-des h6 {
+  margin: 12px 0 7px;
+  color: #a4b0be;
+  font-size: 14.5px;
+  line-height: 14.5px;
+}
+
+.outter-salesview-body .sales-view-body .item .description .list-full-des p {
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 14px;
+  line-height: 14px;
+  color: #a4b0be;
+  margin-bottom: 2px;
+  text-align: start;
+}
+
+.outter-salesview-body .sales-view-body .item .description .list-full-des p.functions {
+  color: black;
+}
+
+.outter-salesview-body .sales-view-body .item .description .list-full-des p.catalog-item-color {
+  line-height: 20px;
+}
+
+.outter-salesview-body .sales-view-body .item .description .list-full-des p.catalog-item-color span {
+  display: inline-block;
+  content: ' ';
+  width: 18px;
+  height: 18px;
+  top: 5px;
+  left: 10px;
+  border-radius: 50%;
+  background-color: black;
+}
+
+.outter-salesview-body .sales-view-body .item .description .list-full-des p span {
+  font-size: 14px;
+  line-height: 14px;
+  color: black;
+  position: relative;
+}
+
+.outter-salesview-body .sales-view-body .item .description .item-action-icons {
+  position: relative;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.outter-salesview-body .sales-view-body .item .description .item-action-icons div {
+  height: 50px;
+  width: 50px;
+}
+
+.outter-salesview-body .sales-view-body .item .description .item-action-icons div i {
+  font-size: 26px;
+  line-height: 50px;
+}
+
+.outter-salesview-body .sales-view-body .item .description .item-action-icons div.cart {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: auto;
+  padding: 0px 30px;
+  border-radius: 25px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.outter-salesview-body .sales-view-body .item .description .item-action-icons div.cart i {
+  margin-right: 10px;
+}
+
+.outter-salesview-body .sales-view-body .item .description .delivery-options {
+  margin: 5% 0;
+  height: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.outter-salesview-body .sales-view-body .item .description .delivery-options div {
+  line-height: 26px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 16px;
+  margin-bottom: 20px;
+  color: #0b2546;
+}
+
+.outter-salesview-body .sales-view-body .item .description .delivery-options div i {
+  margin-right: 10px;
+  font-size: 26px;
+}
+
+.outter-salesview-body .sales-view-body .item .description .rate {
+  width: 80%;
+}
+
+.outter-salesview-body .sales-view-body .item .description p.sub-title {
+  display: none;
+}
+
+.outter-salesview-body .sales-view-body .item .description p.sub-title.bottom {
+  display: block;
+  bottom: 2%;
+  position: absolute;
+}
+
 nav.products-pagination {
   width: 100%;
   display: -webkit-box;
