--- a/resources/sass/catalog-page.scss
+++ b/resources/sass/catalog-page.scss
@@ -11,9 +11,16 @@
 @import "2-layouts/top-header";
 @import "2-layouts/main-header";
 @import "2-layouts/nav-header";
+
 @import "2-layouts/price-rating-comments";
 @import "2-layouts/full-banner";
 @import "2-layouts/pagination";
+
+@import "2-layouts/catalog-section-items";
+@import "2-layouts/index-shop-views";
+@import "2-layouts/top-brands";
+@import "2-layouts/newones-popular_p-recommended";
+
 
 @import "2-layouts/news-letter";
 @import "2-layouts/footer";
