--- a/resources/sass/shop.scss
+++ b/resources/sass/shop.scss
@@ -11,7 +11,7 @@
 @import "2-layouts/top-header";
 @import "2-layouts/main-header";
 @import "2-layouts/nav-header";
-
+@import "2-layouts/product-of-day";
 
 @import "2-layouts/price-rating-comments";
 @import "2-layouts/pagination";
